cleanups; improved startup